flux/apps/int/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: filebrowser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.63.3
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /database
            - name: downloads
              mountPath: /srv/downloads
            - name: music
              mountPath: /srv/music
            - name: movies
              mountPath: /srv/movies
            - name: private
              mountPath: /srv/private
            - name: tvs
              mountPath: /srv/tvs
            - name: games
              mountPath: /srv/games
            - name: videos
              mountPath: /srv/videos
            - name: special
              mountPath: /srv/special
            - name: books
              mountPath: /srv/books
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "6Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: music
          persistentVolumeClaim:
            claimName: music-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: movies-pvc
        - name: private
          persistentVolumeClaim:
            claimName: private-pvc
        - name: tvs
          persistentVolumeClaim:
            claimName: tvs-pvc
        - name: games
          persistentVolumeClaim:
            claimName: games-pvc
        - name: videos
          persistentVolumeClaim:
            claimName: videos-pvc
        - name: special
          persistentVolumeClaim:
            claimName: special-pvc
        - name: books
          persistentVolumeClaim:
            claimName: books-pvc
